Attempt 3 to fix maze not showing up in safari

--- a/css/main.css
+++ b/css/main.css
@@ -21,6 +21,7 @@ body {
     display: -ms-flexbox;
     display: -webkit-flex;
     display: flex;
+    -webkit-flex-direction: column;
     flex-direction: column;
 }
 
@@ -130,6 +131,7 @@ div.maze-row {
     display: -ms-flexbox;
     display: -webkit-flex;
     display: flex;
+    -webkit-flex-direction: row;
     flex-direction: row;
 }
 
